画像の出力を修正2

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -60,7 +60,11 @@
                     <div class="col mb-5">
                         <div class="card h-100 card-list">
                             <!-- Product image-->
-                            <%= link_to (image_tag product.img, class: "card-img card-img-top"), product %>
+                            <% if product.img.attached? %>
+        <%= link_to product_path(product) do %>
+          <%= image_tag url_for(product.img), class: "card-img card-img-top" %>
+        <% end %>
+      <% end %>
 
                             <!-- Product details-->
                             <div class="card-body p-4">
