--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -60,11 +60,7 @@
                     <div class="col mb-5">
                         <div class="card h-100 card-list">
                             <!-- Product image-->
-                            <% if product.img.attached? %>
-        <%= link_to product_path(product) do %>
-          <%= image_tag url_for(product.img), class: "card-img card-img-top" %>
-        <% end %>
-      <% end %>
+                            <%= link_to (image_tag product.img.variant(:display), class: "card-img card-img-top"), product %>
 
                             <!-- Product details-->
                             <div class="card-body p-4">
