--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,40 +1,17 @@
         <!-- Header-->
-        <header class="bg-dark py-5">
-            <div class="container px-4 px-lg-5 my-5">
-                <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">Appliance on Railsにようこそ</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">さまざまな商品取り扱っています。</p>
-                </div>
-            </div>
-        </header>
-        <!-- Section-->
-        <section class="py-5">
-            <div class="container px-4 px-lg-5 mt-5">
-                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                    <% @products.each do |product| %>
-                    <div class="col mb-5">
-                        <div class="card h-100 card-list">
-                            <!-- Product image-->
-                            <%= link_to product_path(product) do %>
-                            <%= image_tag product.img, class: "card-img-top" if product.img.attached? %>
-                            <% end %>
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder"><%= product.name %></h5>
-                                    <!-- Product price-->
-                                    ¥<%= number_to_currency(product.price, unit: "¥", format: "%n", delimiter: ",", precision: 0) %>
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">カートに入れる</a></div>
-                            </div>
-                        </div>
-                    </div>
-                    <% end %>
-                </div>
-            </div>
-        </section>
-
+<header class="bg-dark py-5">
+  <div class="container px-4 px-lg-5 my-5">
+    <div class="text-center text-white">
+      <h1 class="display-4 fw-bolder">Appliance on Railsにようこそ</h1>
+      <p class="lead fw-normal text-white-50 mb-0">さまざまな商品取り扱っています。</p>
+    </div>
+  </div>
+</header>
+<!-- Section-->
+<section class="py-5">
+  <div class="container px-4 px-lg-5 mt-5">
+    <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+      <%= render @products %>
+    </div>
+  </div>
+</section>
