--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -29,29 +29,7 @@
   <div class="container px-4 px-lg-5 mt-5">
     <h2 class="fw-bolder mb-4">最新の商品</h2>
     <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-      <% @latest_product.each do |product| %>
-        <div class="col mb-5">
-          <div class="card h-100 card-list">
-            <!-- Product image-->
-            <%= link_to product_path(product) do %>
-              <%= image_tag product.img, class: "card-img-top" if product.img.attached? %>
-            <% end %>
-            <!-- Product details-->
-            <div class="card-body p-4">
-              <div class="text-center">
-                <!-- Product name-->
-                <h5 class="fw-bolder"><%= product.name %></h5>
-                <!-- Product price-->
-                ¥<%= number_to_currency(product.price, unit: "¥", format: "%n", delimiter: ",", precision: 0) %>
-              </div>
-            </div>
-            <!-- Product actions-->
-            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-              <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
-            </div>
-          </div>
-        </div>
-      <% end %>
+      <%= render partial: "product", collection: @latest_product %>
     </div>
   </div>
 </section>
