--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -3,9 +3,21 @@
 
 
 .card-list {
+    .card-body {
+        a {
+            color:#000;
+            text-decoration: none;
+            transition: 0.3s;
+        }
+    }
     &:hover {
         border: 1px solid #000;
         transition: 0.3s;
+        .card-body {
+            a {
+                text-decoration: underline;
+            }
+        }
     } 
 
     .card-img-top {
@@ -18,3 +30,48 @@
         }
     }
 }
+
+//管理画面用
+
+.admin-product-index {
+    table {
+        thead {
+            background: rgba(0,0,0,0.6);
+        }
+        tr,td {
+            vertical-align: middle;
+        }
+        tr {
+            td {
+                &:nth-of-type(1) {
+                    width: 10%;
+                }
+                &:nth-of-type(2) {
+                    width: 40%;
+                }
+                &:nth-of-type(3) {
+                    width: 30%;
+                }
+                &:nth-of-type(4) {
+                    width: 10%;
+                }
+                &:nth-of-type(5) {
+                    width: 10%;
+                }
+                a.btn-info {
+                    color: #fff;
+                }
+            }
+        }
+        
+    }
+}
+
+.form-group {
+    .preview-img {
+        width: 300px;
+        margin-top: 20px;
+    }
+}
+
+
