--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,13 +38,15 @@
             </li>
             <li class="nav-item"><%= link_to "管理者ログイン", admin_products_path, class: "nav-link" %></li>
           </ul>
-          <form class="d-flex">
-            <button class="btn btn-outline-dark" type="submit">
+          <div class="d-flex">
+            <%= link_to carts_path, class: "btn btn-outline-dark" do %>
               <i class="bi-cart-fill me-1"></i>
               Cart
-              <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-            </button>
-          </form>
+              <span class="badge bg-dark text-white ms-1 rounded-pill">
+                <%= @cart.sum_quantity %>
+              </span>
+            <% end %>
+          </div>
         </div>
       </div>
     </nav>
