--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -17,7 +17,11 @@
     </div>
     <!-- Product actions-->
     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-      <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">カートに入れる</a></div>
+      <div class="text-center">
+        <%= form_with url: cart_products_path(product_id: product.id, quantity: 1), method: :post do |f| %>
+          <%= f.submit "Add to cart", class: "btn btn-outline-dark mt-auto" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
