--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,16 +13,17 @@
           ¥<span><%= number_to_currency(@product.price, unit: "¥", format: "%n", delimiter: ",", precision: 0) %></span>
         </div>
         <p class="lead"><%= @product.description %></p>
-        <div class="d-flex">
-          <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
-          <button class="btn btn-outline-dark flex-shrink-0" type="button">
+        <%= form_with url: cart_products_path(product_id: @product.id), class: "d-flex"  do |f| %>
+          <%= f.number_field :quantity, class: 'form-control text-center me-3', style: 'max-width: 4rem', min: 1, value: 1 %>
+          <%= button_tag type: 'submit', class: "btn btn-outline-dark flex-shrink-0" do %>
             <i class="bi-cart-fill me-1"></i>
             Add to cart
-          </button>
+          <% end %>
         </div>
-      </div>
+      <% end %>
     </div>
   </div>
+</div>
 </section>
 <!-- Related items section-->
 <section class="py-5 bg-light">
