--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
               <i class="bi-cart-fill me-1"></i>
               Cart
               <span class="badge bg-dark text-white ms-1 rounded-pill">
-                <%= @cart.sum_quantity %>
+                <%= @current_cart.sum_quantity %>
               </span>
             <% end %>
           </div>
