チェックアウト機能実装

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -88,6 +88,7 @@
     }
 }
 
+
 .form-group {
     .preview-img {
         width: 300px;
@@ -95,4 +96,11 @@
     }
 }
 
+.order-img {
+    width: 100px;
+    margin: 0;
+}
 
+.order-wrap {
+    width: 50%;
+}
