--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -10,6 +10,7 @@
           <span class="badge bg-primary rounded-pill"><%= @current_cart.sum_quantity %></span>
         </h4>
         <ul class="list-group mb-3">
+          <% if @cart_products.present? %>
           <% @cart_products.each do |item| %>
             <li class="list-group-item d-flex justify-content-between lh-sm">
               <div class="d-flex">
@@ -29,24 +30,28 @@
               </div>
             </li>
           <% end %>
+          <% if @promotion_code.present? %>
           <li class="list-group-item d-flex justify-content-between bg-body-tertiary">
             <div class="text-success">
-              <h6 class="my-0">Promo code</h6>
-              <small>EXAMPLECODE</small>
+              <h6 class="my-0">割引額</h6>
             </div>
-            <span class="text-success">−$5</span>
+            <span class="text-success">-<%= number_to_currency(@promotion_code.discount, unit: "¥", format: "%n", delimiter: ",", precision: 0) %></span>
           </li>
+          <% end %>
           <li class="list-group-item d-flex justify-content-between">
             <span>合計</span>
             <strong><span>JPY</span>¥<%= number_to_currency(@total_price, unit: "¥", format: "%n", delimiter: ",", precision: 0) %></strong>
           </li>
+          <% else %>
+            商品はありません
+          <% end %>
         </ul>
-        <form class="card p-2">
+        <%= form_with url: promotion_codes_path, class: "card p-2" do |f|%>
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="Promo code">
-            <button type="submit" class="btn btn-secondary">Redeem</button>
+            <%= f.text_field :code, class: "form-control", placeholder: "プロモーションコード" %>
+                <%= f.button "適用する", type: "submit", class: "btn btn-secondary" %>
           </div>
-        </form>
+            <% end %>
       </div>
       <div class="col-md-7 col-lg-8">
         <h4 class="mb-3">お客様情報</h4>
