--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -5,7 +5,7 @@
       <div class="mb-3">
         <p><strong>注文番号:</strong> <%= @order.id %></p>
         <p><strong>注文日時:</strong> <%= @order.created_at.strftime("%Y-%m-%d %H:%M:%S") %></p>
-        <p><strong>合計金額:</strong> ¥<%= number_to_currency(@order.total_price, unit: "", format: "%n", delimiter: ",", precision: 0) %></p>
+        <p><strong>合計金額:</strong> ¥<%= number_to_currency(@order.total_price, unit: "¥", format: "%n", delimiter: ",", precision: 0) %></p>
       </div>
       <h2 class="h4 mb-5">注文者情報</h2>
       <table class="table table-borderless">
