--- a/app/views/order_mailer/checkout_mail.html.erb
+++ b/app/views/order_mailer/checkout_mail.html.erb
@@ -25,5 +25,12 @@
         <td>¥<%= number_to_currency(item.price, unit: "", format: "%n", delimiter: ",", precision: 0) %></td>
       </tr>
     <% end %>
+    <% if @order.promotion_code.present? %>
+      <tr>
+        <th>割引額</th>
+        <td></td>
+        <td>-<%= number_to_currency(@order.promotion_code.discount, unit: "¥", format: "%n", delimiter: ",", precision: 0) %></td>
+      </tr>
+    <% end %>
   </tbody>
 </table>
